syntax = "proto3";
package graphql.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/graphql";


// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message ServiceSpec {
  reserved 1;
  reserved "endpoint";

  message Endpoint {
   // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
    reserved 1;
    reserved "url";
  }
}
